visual improvements, mobile version bug user logins, restart, and games played all centered When turning into mobile mode, the tokens are not aligned.

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -17,7 +17,12 @@ body {
 }
 
 .btn {
-  float: right;
+  display: block;
+  margin: auto;
+  margin-top: 20px;
+  // float: right;
+  // margin-right: 10px;
+  // margin-top: 20px;
 }
 
 .modal-titles {
@@ -56,7 +61,8 @@ h1 {
   clear: both;
   font-family: 'Bungee Shade', cursive;
   font-size: 60px;
-  margin-top: 80px;
+  margin-bottom: 8px;
+  margin-top: 60px;
   text-align: center;
 }
 
@@ -92,22 +98,27 @@ h1 {
 }
 
 .restart {
-  float: left;
+  display: block;
+  float: both;
   font-family: 'Bungee Shade', cursive;
-  font-size: 30px;
-  margin: 0, auto;
+  font-size: 28px;
+  margin: auto;
+  margin-top: 50px;
   text-align: center;
   visibility: hidden;
   width: 275px;
 }
 
 .total-games {
+  display: block;
   float: both;
   font-family: 'Bungee Shade', cursive;
-  font-size: 23px;
-  margin: 0, auto;
+  font-size: 25px;
+  margin: auto;
+  margin-top: 30px;
   text-align: center;
   visibility: hidden;
+  width: 275px;
 }
 
 footer {
@@ -115,7 +126,7 @@ footer {
   font-family: 'Josefin Sans', sans-serif;
   font-size: 15px;
   height: 20px;
-  margin-top: 150px;
+  margin-top: 50px;
   position: relative;
   text-align: center;
 }
@@ -163,6 +174,4 @@ footer {
     margin-top: 5px;
     text-align: center;
   }
-
-  //need a message setting for iphone
-  }
+}
